cabal-version:       >=1.10
name:                cis5520-fun
version:             0.1.0.0
-- synopsis:
-- description:
license-file:        LICENSE
maintainer:          sweirich@seas.upenn.edu
build-type:          Simple
extra-source-files:  CHANGELOG.md

library
  exposed-modules:     ParserCombinators
                     , FunSyntax
                     , FunEnv
                     , FunEnvError
                     , FunCont
                     , FunTypes
  build-depends:       HUnit >= 1.6
                     , QuickCheck >= 2.14
                     , base >= 4.14
                     , containers >= 0.6
                     , mtl >= 2.2
                     , pretty >= 1.1
                     , freer-simple >= 1.2
  default-language:    Haskell2010
  ghc-options:        -Wno-missing-signatures -Wtype-defaults -Wincomplete-patterns
   -- these extensions are enabled for GHC2021, turning them on now for 
  -- future compatibility
  default-extensions:
    BangPatterns
    BinaryLiterals
    ConstrainedClassMethods
    ConstraintKinds
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DoAndIfThenElse
    EmptyCase
    EmptyDataDecls
    EmptyDataDeriving
    ExistentialQuantification
    ExplicitForAll
    FlexibleContexts
    FlexibleInstances
    ForeignFunctionInterface
    GADTSyntax
    GeneralisedNewtypeDeriving
    HexFloatLiterals
    ImplicitPrelude
    ImportQualifiedPost
    InstanceSigs
    KindSignatures
    MonomorphismRestriction
    MultiParamTypeClasses
    NamedFieldPuns
    NamedWildCards
    NumericUnderscores
    PatternGuards
    PolyKinds
    PostfixOperators
    RankNTypes
    RelaxedPolyRec
    ScopedTypeVariables
    StandaloneDeriving
    StandaloneKindSignatures
    NoStarIsType
    TraditionalRecordSyntax
    TupleSections
    TypeApplications
    TypeOperators
    TypeSynonymInstances